# wisehours

./: .gitignore  requirements.txt
hours/: db-backup.sh  db.sqlite3  manage.py  old-db.sqlite3  pyproject.toml  tempCodeRunnerFile.javascript
hours/hours/: asgi.py  settings.py  urls.py  wsgi.py
hours/sheets/: admin.py  api_views.py  customDecorators.py  customPermissions.py  login_views.py  models.py  serializers.py  urls.py  views.py
hours/sheets/migrations/: 0001_initial.py  0002_alter_user_options_user_wage_alter_user_table.py  0002_sheet_user.py  0003_alter_user_wage.py  0003_project.py  0004_alter_sheet_data.py  0004_user_sheba_number_user_account_number_user_address_and_more.py  0005_alter_user_dob.py  0005_projectfamily_alter_sheet_user_project_family.py  0006_sheet_mean_sheet_total.py  0006_user_addition1_user_fix_payment_user_reduction1_and_more.py  0007_alter_projectfamily_options_sheet_submited.py  0007_sheet_user_name_user_comment_alter_sheet_user.py  0008_remove_user_fix_payment_user_base_payment.py  0008_rename_submited_sheet_submitted.py  0009_sheet_addition1_sheet_base_payment_sheet_reduction1_and_more.py  0010_alter_user_comment.py  0011_sheet_is_salary_paid.py  0012_remove_sheet_is_salary_paid_sheet_payment_status.py  0013_sheet_addition2_user_addition2_and_more.py  0014_alter_sheet_payment_status.py  0015_alter_user_is_active.py  0016_sheet_food_data.py  0017_fooddata.py  0018_user_is_foodmanager.py  0019_sheet_food_reduction_user_food_reduction.py  0020_food_data_order_mode.py  0021_auto_20240724_1102.py  0022_food_data_statistics_and_cost_data.py  (+11 more)
(+51 files in other folders)
