[tool.poetry]
name = "hours"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.djlint]
line_break_after_multiline_tag=true
ignore="H014,H030,H031,H006,H021"
max_blank_lines=2